@@ -5,13 +5,32 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase;
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
+import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.annotation.DirtiesContext;
 
 import java.math.BigDecimal;
 import java.util.Collections;
+import java.util.List;
 
-//@SpringBootTest
-@AutoConfigureTestDatabase
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+/*
+* @SpringBootTest: This annotation is used to bootstrap the entire application context for integration tests.
+* It loads the complete application, including all the configuration classes, beans, and dependencies.
+
+* @AutoConfigureTestDatabase: This annotation is used to automatically configure the test database.
+* By default, it uses an in-memory H2 database,
+* but you can customize it by providing a different database configuration.
+
+* @DataJpaTest: This annotation is used to test Spring Data JPA repositories.
+* It provides a subset of the application context, including the JPA infrastructure,
+* and automatically configures the test database. It also includes the @AutoConfigureTestDatabase annotation.
+
+* @DirtiesContext: This annotation is used to clean up the test database after each test method.
+* By default, it uses the AFTER_CLASS class mode,
+* which means that the test database will be cleaned up after each test class.
+* */
+//@AutoConfigureTestDatabase
 @DataJpaTest
 @DirtiesContext(classMode = DirtiesContext.ClassMode.AFTER_CLASS)
 class RoomRepositoryTest {
@@ -21,26 +40,27 @@ class RoomRepositoryTest {
 
     @Test
     void shouldFindFindDistinctRoomTypes() {
-        // given
-        Room room1 = new Room();
-        room1.setRoomType("Standard Room");
-        room1.setBookedRooms(Collections.emptyList());
-        room1.setPhoto(null);
-        room1.setRoomPrice(new BigDecimal(100));
-        underTest.save(room1);
-       /* Room room2 = new Room();
-        room2.setRoomType("Standard Room");
-        Room room3 = new Room();
-        room3.setRoomType("Deluxe Room");
-        underTest.saveAll(List.of(room1, room2, room3));
+    // given
+    Room room1 = new Room();
+    room1.setRoomType("Standard Room");
+    room1.setBookings(Collections.emptyList());
+    room1.setPhoto(null);
+    room1.setRoomPrice(new BigDecimal(100));
+    underTest.save(room1);
 
-        // when
-        List<String> result = underTest.findDistinctRoomTypes();
+    Room room2 = new Room();
+    room2.setRoomType("Standard Room");
+    Room room3 = new Room();
+    room3.setRoomType("Deluxe Room");
+    underTest.saveAll(List.of(room1, room2, room3));
 
-        // then
-        assertEquals(2, result.size());
-        assertEquals(List.of("Standard Room", "Deluxe Room"), result);
-        assertTrue(result.contains("Standard Room"));
-        assertTrue(result.contains("Deluxe Room"));*/
-    }
+    // when
+    List<String> result = underTest.findDistinctRoomTypes();
+
+    // then
+    assertEquals(2, result.size());
+    assertEquals(List.of("Standard Room", "Deluxe Room"), result);
+    assertTrue(result.contains("Standard Room"));
+    assertTrue(result.contains("Deluxe Room"));
+}
 }
